--- a/app/src/main/res/values/textsizes.xml
+++ b/app/src/main/res/values/textsizes.xml
@@ -4,8 +4,8 @@
 	<dimen name="ts_min_temp_today">36sp</dimen>
 	<dimen name="ts_max_temp_details">92sp</dimen>
 	<dimen name="ts_min_temp_details">48sp</dimen>
-	<dimen name="ts_general_info">22sp</dimen>
-	<dimen name="ts_additional_info">14sp</dimen>
+	<dimen name="ts_primary_info">22sp</dimen>
+	<dimen name="ts_secondary_info">14sp</dimen>
 	<dimen name="ts_details_today_header">24sp</dimen>
 	<dimen name="ts_details_date">16sp</dimen>
 	<dimen name="ts_forecast">22sp</dimen>
