--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -55,21 +55,21 @@
 
 			<TextView
 				android:id="@+id/detail_humidity_textview"
-				style="@style/SansSerifLight.General"
+				style="@style/SansSerifLight.Primary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:text="Humidity: 48%"/>
 
 			<TextView
 				android:id="@+id/detail_wind_textview"
-				style="@style/SansSerifLight.General"
+				style="@style/SansSerifLight.Primary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:text="Wind: 6 km/h NW"/>
 
 			<TextView
 				android:id="@+id/detail_pressure_textview"
-				style="@style/SansSerifLight.General"
+				style="@style/SansSerifLight.Primary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:text="Pressure: 1014 hPa"/>
@@ -91,7 +91,7 @@
 				android:src="@mipmap/art_clear"/>
 			<TextView
 				android:id="@+id/detail_forecast_textview"
-				style="@style/SansSerifCondensed.Grey.GeneralDetails"
+				style="@style/SansSerifCondensed.Grey.PrimaryDetails"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="Clear"/>
