--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -26,13 +26,13 @@
 				  android:orientation="vertical">
 
 		<TextView android:id="@+id/list_item_date_textview"
-				  style="@style/SansSerifCondensed.Black.General"
+				  style="@style/SansSerifCondensed.Black.Primary"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
 				  android:text="Tomorrow"/>
 
 		<TextView android:id="@+id/list_item_forecast_textview"
-				  style="@style/SansSerifCondensed.Grey.GeneralMainForeccast"
+				  style="@style/SansSerifCondensed.Grey.SecondaryMainForeccast"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
 				  android:text="Clear"/>
@@ -46,13 +46,13 @@
 				  android:orientation="vertical">
 
 		<TextView android:id="@+id/list_item_high_textview"
-				  style="@style/SansSerifCondensed.Black.General"
+				  style="@style/SansSerifCondensed.Black.Primary"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
 				  android:text="81°"/>
 
 		<TextView android:id="@+id/list_item_low_textview"
-				  style="@style/SansSerifCondensed.Grey.GeneralMainForeccast"
+				  style="@style/SansSerifCondensed.Grey.SecondaryMainForeccast"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
 				  android:text="30°"/>
