--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -14,7 +14,7 @@
 				  android:orientation="vertical">
 
 		<TextView android:id="@+id/list_item_date_textview"
-				  style="@style/SansSerifCondensed.White.General"
+				  style="@style/SansSerifCondensed.White.Primary"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
 				  android:text="Today, June 24"/>
@@ -45,7 +45,7 @@
 				   android:src="@mipmap/art_clear"/>
 
 		<TextView android:id="@+id/list_item_forecast_textview"
-				  style="@style/SansSerifCondensed.White.General"
+				  style="@style/SansSerifCondensed.White.Primary"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
 				  android:text="Clear"/>
