--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -17,14 +17,14 @@
 			<!-- Header: Day, Date -->
 			<TextView
 				android:id="@+id/detail_day_textview"
-				style="@style/SansSerifCondensed.Black"
+				style="@style/SansSerifCondensed.TC_TS_Primary"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="Tomorrow"
 				android:textSize="@dimen/ts_details_today_header"/>
 			<TextView
 				android:id="@+id/detail_date_textview"
-				style="@style/SansSerifCondensed.Grey"
+				style="@style/SansSerifCondensed.TC_Secondary"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="June 24"
@@ -42,34 +42,34 @@
 			<!-- Maz, Min, Humidity, wind, pressure -->
 			<TextView
 				android:id="@+id/detail_high_textview"
-				style="@style/SansSerifLight.Black.Max"
+				style="@style/SansSerifLight.TC_Primary.Max"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="21°"/>
 			<TextView
 				android:id="@+id/detail_low_textview"
-				style="@style/SansSerifLight.Grey.Min"
+				style="@style/SansSerifLight.TC_Secondary.Min"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="11°"/>
 
 			<TextView
 				android:id="@+id/detail_humidity_textview"
-				style="@style/SansSerifLight.Primary"
+				style="@style/SansSerifLight.TS_Primary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:text="Humidity: 48%"/>
 
 			<TextView
 				android:id="@+id/detail_wind_textview"
-				style="@style/SansSerifLight.Primary"
+				style="@style/SansSerifLight.TS_Primary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:text="Wind: 6 km/h NW"/>
 
 			<TextView
 				android:id="@+id/detail_pressure_textview"
-				style="@style/SansSerifLight.Primary"
+				style="@style/SansSerifLight.TS_Primary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:text="Pressure: 1014 hPa"/>
@@ -91,7 +91,7 @@
 				android:src="@mipmap/art_clear"/>
 			<TextView
 				android:id="@+id/detail_forecast_textview"
-				style="@style/SansSerifCondensed.Grey.PrimaryDetails"
+				style="@style/SansSerifCondensed.TC_Secondary.TS_Forecast"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="Clear"/>
