--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -53,21 +53,21 @@
 
 			<TextView
 				android:id="@+id/detail_humidity_textview"
-				style="@style/SansSerifLight.TS_Primary"
+				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:text="Humidity: 48%"/>
 
 			<TextView
 				android:id="@+id/detail_wind_textview"
-				style="@style/SansSerifLight.TS_Primary"
+				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:text="Wind: 6 km/h NW"/>
 
 			<TextView
 				android:id="@+id/detail_pressure_textview"
-				style="@style/SansSerifLight.TS_Primary"
+				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:text="Pressure: 1014 hPa"/>
