--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,11 @@
 	<color name="today_item_background">#ff1a70b1</color>
 	<color name="tc_primary">#ff313131</color>
 	<color name="tc_secondary">#646464</color>
-	<color name="grey">#cccccc</color>
+	<color name="tc_tertiary">#858EA5</color>
 	<color name="light_blue">#ff64c2f4</color>
 	<color name="sunshine_blue">#ff1ca8f4</color>
 	<color name="sunshine_dark_blue">#0288D1</color>
 	<color name="red">#ff0000</color>
+	<color name="grey">#cccccc</color>
 	<color name="white">#ffffffff</color>
 </resources>
