--- a/app/src/main/res/xml/settings_pref_general.xml
+++ b/app/src/main/res/xml/settings_pref_general.xml
@@ -19,6 +19,7 @@
 		android:title="@string/pref_units_label"/>
 
 	<CheckBoxPreference
+		android:widgetLayout="@layout/custom_checkbox"
 		android:defaultValue="@string/pref_enable_notifications_default"
 		android:key="@string/pref_enable_notifications_key"
 		android:summaryOff="@string/pref_enable_notifications_false"
