--- a/app/src/main/res/drawable/forecast_today_touch_selector.xml
+++ b/app/src/main/res/drawable/forecast_today_touch_selector.xml
@@ -9,7 +9,7 @@
 	<item android:drawable="@color/light_blue" android:state_activated="true"/>
 
 	<!-- Default, "just hangin' out" state. -->
-	<item android:drawable="@color/today_item_background"/>
+	<item android:drawable="@color/grey"/>
 </selector>
 
 
