--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,8 @@
 		<item name="android:textColorSecondary">@color/tc_secondary</item>
 		<!-- OverFlow Menu Text Color -->
 		<item name="android:itemTextAppearance">@style/ItemTextAppearance</item>
+		<!-- Removes a shadow under the ActionBar -->
+		<item name="android:windowContentOverlay">@null</item>
 	</style>
 
 	<style name="SunshineAppTheme" parent="SunshineAppTheme.Base">
