--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="SunshineAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="windowActionBar">false</item>
-    </style>
 
-    <!-- main activity action bar styles -->
-    <style name="SunshineToolBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:background">@color/red</item>
-      <!--  <item name="android:title">@string/app.name</item>-->
-    </style>
+	<style name="SunshineAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+	</style>
 
-    <style name="SansSerifCondensed">
-        <item name="android:fontFamily">sans-serif-condensed</item>
-    </style>
+	<!-- main activity action bar styles -->
+	<style name="SunshineToolBar" parent="ThemeOverlay.AppCompat.Dark">
+		<item name="android:background">@color/sunshine_blue</item>
+	</style>
 
-    <style name="SansSerifLight" >
-        <item name="android:fontFamily">sans-serif-light</item>
-    </style>
+	<style name="PopupMenuListView" parent="ThemeOverlay.AppCompat.Dark">
+		<item name="android:divider">@color/white</item>
+		<item name="android:dividerHeight">1dp</item>
+		<item name="android:textAppearance">@style/SansSerifCondensed</item>
+	</style>
 
+	<style name="SansSerifCondensed">
+		<item name="android:fontFamily">sans-serif-condensed</item>
+	</style>
+
+	<style name="SansSerifLight">
+		<item name="android:fontFamily">sans-serif-light</item>
+	</style>
+
+	<!-- NOTE: not finished yet! -->
 
 </resources>
