--- a/app/src/main/res/menu/menu_main_f_activity.xml
+++ b/app/src/main/res/menu/menu_main_f_activity.xml
@@ -5,4 +5,9 @@
 		  android:title="@string/item_settings"
 		  android:orderInCategory="100"
 		  android:showAsAction="never"/>
+	<item android:id="@+id/item_db_manager"
+		  android:visible="false"
+		  android:title="@string/item_db_manager"
+		  android:orderInCategory="100"
+		  android:showAsAction="never"/>
 </menu>
