--- a/app/src/main/res/values/strings_menu.xml
+++ b/app/src/main/res/values/strings_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="item_settings">Settings</string>
+	<string name="item_db_manager">DB manager</string>
 	<string name="item_refresh" translatable="false">Refresh</string>
 	<string name="item_map" translatable="false">Map</string>
 	<string name="item_share" translatable="false">Share</string>
