--- a/app/src/main/res/values/strings_activity_settingsl.xml
+++ b/app/src/main/res/values/strings_activity_settingsl.xml
@@ -36,6 +36,6 @@
 	<string name="pref_enable_notifications_false">Not Enabled</string>
 	<string name="pref_enable_notifications_default" translatable="false">true</string>
 
-
+	<string name="pref_location_status_key" translatable="false">location-status</string>
 
 </resources>
