issue#24 - added announce for OK button in LocatinEditTextPref

--- a/app/src/main/res/values/strings_activity_settingsl.xml
+++ b/app/src/main/res/values/strings_activity_settingsl.xml
@@ -38,4 +38,6 @@
 
 	<string name="pref_location_status_key" translatable="false">location-status</string>
 
+	<string name="accessibility_positive_btn_disabled">The OK button is disabled.</string>
+	<string name="accessibility_positive_btn_enabled">The OK button is enabled.</string>
 </resources>
