--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
 	<dimen name="today_item_left_margin">60dp</dimen>
 	<dimen name="details_humidity_margin">4dp</dimen>
 	<dimen name="shadow_size">0dp</dimen>
+	<dimen name="notification_large_icon_default">48dp</dimen>
 </resources>
