--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -68,6 +68,7 @@
 					android:id="@+id/detail_icon"
 					android:layout_width="@dimen/icon_details_size"
 					android:layout_height="@dimen/icon_details_size"
+					android:adjustViewBounds="true"
 					android:src="@mipmap/art_clear"/>
 				<TextView
 					android:id="@+id/detail_forecast_textview"
