--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -14,6 +14,7 @@
 				 android:layout_height="wrap_content">
 
 		<ImageView android:id="@+id/list_item_icon"
+				   android:adjustViewBounds="true"
 				   android:layout_width="@dimen/icon_listitem_size"
 				   android:layout_height="@dimen/icon_listitem_size"
 				   android:layout_gravity="center"
