issue#25 - added screenshots

--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -41,6 +41,7 @@
 
 		<ImageView android:id="@+id/list_item_icon"
 				   android:adjustViewBounds="true"
+				   android:layout_gravity="center_horizontal"
 				   android:layout_width="@dimen/icon_todayitem_size"
 				   android:layout_height="@dimen/icon_todayitem_size"
 				   android:src="@mipmap/art_clear"/>
