--- a/app/src/main/res/values/strings_activity_settingsl.xml
+++ b/app/src/main/res/values/strings_activity_settingsl.xml
@@ -15,8 +15,8 @@
 	<!--Key name for temperature unit preference in SharedPreferences-->
 	<string name="pref_units_key" translatable="false">units</string>
 
-	<string name="pref_units_metric">metric</string>
-	<string name="pref_units_imperial">imperial</string>
+	<string name="pref_units_metric" translatable="false">metric</string>
+	<string name="pref_units_imperial" translatable="false">imperial</string>
 
 	<string-array name="pref_units_values">
 		<item>@string/pref_units_metric</item>
@@ -26,6 +26,29 @@
 	<string-array name="pref_units_options">
 		<item>@string/pref_units_label_metric</item>
 		<item>@string/pref_units_label_imperial</item>
+	</string-array>
+
+	<!-- Pick you icon pack -->
+	<string name="pref_art_pack_key" translatable="false">art_pack</string>
+	<string name="pref_art_pack_label">Pick your icons pack</string>
+	<string name="pref_art_pack_label_colored">Colored</string>
+	<string name="pref_art_pack_label_mono">Mono</string>
+	<string name="pref_art_pack_label_default">Default</string>
+
+	<string name="pref_art_pack_colored" translatable="false">colored</string>
+	<string name="pref_art_pack_mono" translatable="false">mono</string>
+	<string name="pref_art_pack_default" translatable="false">default</string>
+
+	<string-array name="pref_art_pack_values">
+		<item>@string/pref_art_pack_colored</item>
+		<item>@string/pref_art_pack_mono</item>
+		<item>@string/pref_art_pack_default</item>
+	</string-array>
+
+	<string-array name="pref_art_pack_options">
+		<item>@string/pref_art_pack_label_colored</item>
+		<item>@string/pref_art_pack_label_mono</item>
+		<item>@string/pref_art_pack_label_default</item>
 	</string-array>
 
 	<!-- Strings related to Notification Enabled preference -->
