--- a/app/src/main/res/values-ru/strings_activity_settingsl.xml
+++ b/app/src/main/res/values-ru/strings_activity_settingsl.xml
@@ -10,8 +10,11 @@
 	<string name="pref_units_label_metric">Метрическая</string>
 	<string name="pref_units_label_imperial">Имперская</string>
 
-	<string name="pref_units_metric">метрическая</string>
-	<string name="pref_units_imperial">имперская</string>
+	<!-- Pick you icon pack -->
+	<string name="pref_art_pack_label">Выберите иконки</string>
+	<string name="pref_art_pack_label_colored">Цветные</string>
+	<string name="pref_art_pack_label_mono">Однотонные</string>
+	<string name="pref_art_pack_label_default">По умолчанию</string>
 
 	<!-- Strings related to Notification Enabled preference -->
 	<string name="pref_enable_notifications_label">Уведомления Погоды</string>
