--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="tc_primary">#ff313131</color>
-	<color name="tc_secondary">#646464</color>
-	<color name="tc_tertiary">#858EA5</color>
+	<color name="primary">#ff313131</color>
+	<color name="secondary">#646464</color>
+	<color name="tertiary">#858EA5</color>
 	<color name="light_blue">#ff64c2f4</color>
 	<color name="sunshine_blue">#ff1ca8f4</color>
 	<color name="sunshine_dark_blue">#0288D1</color>
