--- a/app/src/main/res/drawable-v21/forecast_today_touch_selector.xml
+++ b/app/src/main/res/drawable-v21/forecast_today_touch_selector.xml
@@ -6,7 +6,7 @@
 
 	<!-- When the view is "activated". In SINGLE_CHOICE_MODE, it flags the active row
 	of a ListView -->
-	<item android:drawable="@color/light_blue" android:state_activated="true"/>
+	<item android:drawable="@color/primary_light" android:state_activated="true"/>
 
 	<!-- Default, "just hangin' out" state. -->
 	<item android:drawable="@color/grey"/>
