--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -8,7 +8,7 @@
 
 	<!-- main activity action bar styles -->
 	<style name="SunshineToolBar" parent="ThemeOverlay.AppCompat.Dark">
-		<item name="android:background">@color/sunshine_blue</item>
+		<item name="android:background">@color/primary</item>
 		<item name="android:title">@string/app_name</item>
 	</style>
 
