--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="primary">#ff313131</color>
-	<color name="secondary">#646464</color>
-	<color name="tertiary">#858EA5</color>
-	<color name="light_blue">#ff64c2f4</color>
-	<color name="sunshine_blue">#ff1ca8f4</color>
-	<color name="sunshine_dark_blue">#0288D1</color>
-	<color name="red">#ff0000</color>
+	<color name="txt_primary">#ff313131</color>
+	<color name="txt_secondary">#646464</color>
+	<color name="txt_tertiary">#858EA5</color>
+	<color name="primary_light">#ff64c2f4</color>
+	<color name="primary">#ff1ca8f4</color>
+	<color name="primary_dark">#0288D1</color>
 	<color name="grey">#cccccc</color>
 	<color name="white">#ffffffff</color>
 </resources>
