--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,12 +4,12 @@
 	<style name="SunshineAppTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
 		<item name="actionBarStyle">@style/SunshineActionBar</item>
 		<item name="dropDownListViewStyle">@style/PopupMenuListView</item>
-		<item name="colorPrimary">@color/sunshine_blue</item>
-		<item name="colorPrimaryDark">@color/sunshine_dark_blue</item>
+		<item name="colorPrimary">@color/primary</item>
+		<item name="colorPrimaryDark">@color/primary_dark</item>
 		<!--Preference screen title color -->
-		<item name="android:textColor">@color/primary</item>
+		<item name="android:textColor">@color/txt_primary</item>
 		<!--Preference screen value color -->
-		<item name="android:textColorSecondary">@color/secondary</item>
+		<item name="android:textColorSecondary">@color/txt_secondary</item>
 		<!-- OverFlow Menu Text Color -->
 		<item name="android:itemTextAppearance">@style/ItemTextAppearance</item>
 		<!-- Removes a shadow under the ActionBar -->
@@ -21,13 +21,13 @@
 
 	<!-- Action Bar styles -->
 	<style name="SunshineActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
-		<item name="background">@color/sunshine_blue</item>
+		<item name="background">@color/primary</item>
 		<item name="displayOptions">showTitle|showHome|useLogo</item>
 		<item name="titleTextStyle">@style/TitleActionBar</item>
 	</style>
 
 	<style name="PopupMenuListView" parent="@style/Widget.AppCompat.ListView.DropDown">
-		<item name="android:background">@color/sunshine_blue</item>
+		<item name="android:background">@color/primary</item>
 		<item name="android:divider">@color/white</item>
 		<item name="android:dividerHeight">1dp</item>
 		<item name="android:textAppearance">@style/SansSerifCondensed.TC_White</item>
@@ -78,17 +78,17 @@
 	<!-- For MainForecastFragment and its list_item_forecast elements-->
 
 	<style name="SansSerifCondensed.TC_TS_Primary" >
-		<item name="android:textColor">@color/primary</item>
+		<item name="android:textColor">@color/txt_primary</item>
 		<item name="android:textSize">@dimen/ts_primary_info</item>
 	</style>
 
 	<style name="SansSerifCondensed.TC_Secondary" >
-		<item name="android:textColor">@color/secondary</item>
+		<item name="android:textColor">@color/txt_secondary</item>
 	</style>
 
 	<!-- For DetailFragment -->
 	<style name="SansSerifLight.TC_Primary" >
-		<item name="android:textColor">@color/primary</item>
+		<item name="android:textColor">@color/txt_primary</item>
 	</style>
 
 	<style name="SansSerifLight.TC_Primary.Max" >
@@ -96,7 +96,7 @@
 	</style>
 
 	<style name="SansSerifLight.TC_Secondary" >
-		<item name="android:textColor">@color/secondary</item>
+		<item name="android:textColor">@color/txt_secondary</item>
 	</style>
 
 	<style name="SansSerifLight.TC_Secondary.Min" >
@@ -104,12 +104,12 @@
 	</style>
 
 	<style name="SansSerifLight.TC_Tertiary_TS_Primary" >
-		<item name="android:textColor">@color/tertiary</item>
+		<item name="android:textColor">@color/txt_tertiary</item>
 		<item name="android:textSize">@dimen/ts_primary_info</item>
 	</style>
 
 	<style name="SansSerifCondensed.TC_TS_Secondary" >
-		<item name="android:textColor">@color/secondary</item>
+		<item name="android:textColor">@color/txt_secondary</item>
 		<item name="android:textSize">@dimen/ts_secondary_info</item>
 	</style>
 
