--- a/app/src/main/res/drawable/forecast_today_touch_selector.xml
+++ b/app/src/main/res/drawable/forecast_today_touch_selector.xml
@@ -8,8 +8,10 @@
 	of a ListView -->
 	<item android:drawable="@color/primary_light" android:state_activated="true"/>
 
+	<item android:drawable="@color/primary_light" android:state_selected="true"/>
+
 	<!-- Default, "just hangin' out" state. -->
-	<item android:drawable="@color/grey"/>
+	<item android:drawable="@color/primary"/>
 </selector>
 
 
