--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -4,6 +4,7 @@
 			  android:layout_height="match_parent"
 			  android:minHeight="?android:attr/listPreferredItemHeight"
 			  android:orientation="horizontal"
+			  android:gravity="center_vertical"
 			  android:paddingLeft="@dimen/today_item_left_margin"
 			  android:background="@drawable/forecast_today_touch_selector">
 
@@ -32,12 +33,13 @@
 				  android:text="30°"/>
 	</LinearLayout>
 
-	<LinearLayout android:layout_width="wrap_content"
-				  android:layout_height="wrap_content"
-				  android:layout_gravity="center_vertical"
-				  android:layout_weight="0"
-				  android:gravity="center_horizontal"
-				  android:orientation="vertical">
+	<LinearLayout android:layout_height="wrap_content"
+				  android:layout_width="0dp"
+				  android:layout_weight="5"
+				  android:layout_marginRight="@dimen/activity_horizontal_margin"
+				  android:layout_marginEnd="@dimen/activity_horizontal_margin"
+				  android:orientation="vertical"
+				  android:gravity="center_horizontal|bottom">
 
 		<ImageView android:id="@+id/list_item_icon"
 				   android:adjustViewBounds="true"
@@ -50,6 +52,7 @@
 				  style="@style/SansSerifCondensed.TC_White.TS_Primary"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
+				  android:layout_gravity="center_horizontal"
 				  android:text="Clear"/>
 	</LinearLayout>
 
