--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
 	<color name="primary_light">#ff64c2f4</color>
 	<color name="primary">#ff1ca8f4</color>
 	<color name="primary_dark">#0288D1</color>
+	<!-- our detail accent colors -->
+	<color name="detail_accent_pane_background">#455A64</color>
+	<color name="detail_accent_label">#90A4AE</color>
 </resources>
