--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -8,76 +8,12 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:orientation="vertical"
-		>
+		android:orientation="vertical">
 
-		<!-- Header: Day, Date -->
-		<TextView
-			android:id="@+id/detail_day_textview"
-			style="@style/SansSerifCondensed.TC_TS_Primary"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="Tomorrow"
-			android:textSize="@dimen/ts_details_today_header"/>
-		<TextView
-			android:id="@+id/detail_date_textview"
-			style="@style/SansSerifCondensed.TC_Secondary"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="June 24"
-			android:textSize="@dimen/ts_details_date"/>
-
-		<!-- Main content: high, low, art, weather state -->
-		<LinearLayout
+		<include layout="@layout/grid_detail_today"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:layout_marginTop="@dimen/activity_horizontal_margin"
-			android:orientation="horizontal"
-			>
-
-			<LinearLayout
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center_vertical"
-				android:layout_weight="1"
-				android:orientation="vertical">
-
-				<TextView
-					android:id="@+id/detail_high_textview"
-					style="@style/SansSerifLight.TC_Primary.Max"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="21°"/>
-				<TextView
-					android:id="@+id/detail_low_textview"
-					style="@style/SansSerifLight.TC_Secondary.Min"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="11°"/>
-
-			</LinearLayout>
-
-			<LinearLayout
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center_vertical"
-				android:layout_weight="0"
-				android:gravity="center_horizontal"
-				android:orientation="vertical">
-				<ImageView
-					android:id="@+id/detail_icon"
-					android:layout_width="@dimen/icon_details_size"
-					android:layout_height="@dimen/icon_details_size"
-					android:adjustViewBounds="true"
-					android:src="@mipmap/art_clear"/>
-				<TextView
-					android:id="@+id/detail_forecast_textview"
-					style="@style/SansSerifCondensed.TC_Secondary.TS_Forecast"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="Clear"/>
-			</LinearLayout>
-		</LinearLayout>
+			android:layout_height="0dp"
+			android:layout_weight="3"/>
 
 		<!-- Humidity, wind, pressure -->
 		<TextView
