--- a/app/src/main/res/layout/grid_detail_today.xml
+++ b/app/src/main/res/layout/grid_detail_today.xml
@@ -4,27 +4,30 @@
 									  xmlns:tools="http://schemas.android.com/tools"
 									  android:layout_width="match_parent"
 									  android:layout_height="match_parent"
+									  android:background="@color/white"
 									  app:columnCount="2">
 
 	<android.support.v7.widget.Space app:layout_columnSpan="2"
 									 app:layout_columnWeight="1"
 									 app:layout_rowWeight="1"/>
+	<!-- Header: Day, Date -->
 	<TextView
-		android:id="@+id/detail_date_textview"
+		android:id="@+id/detail_day_textview"
+		style="@style/SansSerifCondensed.TC_TS_Primary"
+		android:textSize="@dimen/ts_details_today_header"
 		android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
 		android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
-		android:fontFamily="sans-serif"
 		android:gravity="center_horizontal"
-		android:textAppearance="@style/TextAppearance.AppCompat.Title"
-		android:textColor="@color/txt_secondary"
 		app:layout_columnSpan="2"
 		app:layout_columnWeight="1"
 		app:layout_gravity="fill_horizontal"
 		tools:text="Today, April 03" />
 
+	<!-- Main content: -->
+	<!-- 1st row - art and high temp-->
 	<ImageView
 		android:id="@+id/detail_icon"
-		android:layout_width="0dp"
+		android:layout_width="@dimen/icon_details_size"
 		android:adjustViewBounds="true"
 		android:maxHeight="@dimen/icon_todayitem_size"
 		android:maxWidth="@dimen/icon_todayitem_size"
@@ -35,32 +38,27 @@
 	<TextView
 		android:id="@+id/detail_high_textview"
 		android:layout_width="0dp"
-		android:fontFamily="sans-serif-light"
+		style="@style/SansSerifLight.TC_Primary.Max"
 		android:gravity="center_horizontal"
-		android:textColor="@color/txt_primary"
-		android:textSize="72sp"
 		app:layout_columnWeight="1"
 		app:layout_gravity="fill_horizontal"
 		tools:text="19" />
 
+	<!-- 2nd row - weather and low temp -->
 	<TextView
 		android:id="@+id/detail_forecast_textview"
 		android:layout_width="0dp"
-		android:fontFamily="sans-serif"
+		style="@style/SansSerifCondensed.TC_Secondary.TS_Forecast"
 		android:gravity="center_horizontal"
-		android:textAppearance="@style/TextAppearance.AppCompat.Title"
-		android:textColor="@color/txt_secondary"
 		app:layout_columnWeight="1"
 		tools:text="Rainy" />
 
 	<TextView
 		android:id="@+id/detail_low_textview"
 		android:layout_width="0dp"
+		style="@style/SansSerifLight.TC_Secondary.Min"
 		android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
-		android:fontFamily="sans-serif-light"
 		android:gravity="center_horizontal"
-		android:textColor="@color/txt_secondary"
-		android:textSize="36sp"
 		app:layout_columnWeight="1"
 		tools:text="10" />
 
