issue#27 - removed _dayView, added additional LinearLayout for Humidity, wind, pressure, changed bg color

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,21 +1,30 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-			xmlns:tools="http://schemas.android.com/tools"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:padding="@dimen/activity_vertical_margin"
-			tools:context="view.DetailActivity">
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical">
 
+	<!-- Main content: art, weather, low and high temp -->
+	<include layout="@layout/grid_detail_today"
+			 android:layout_width="match_parent"
+			 android:layout_height="0dp"
+			 android:layout_weight="3"/>
+
+	<!-- Humidity, wind, pressure -->
 	<LinearLayout
+		android:id="@+id/detail_additional_pane"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:orientation="vertical">
+		android:layout_height="0dp"
+		android:layout_weight="2"
+		android:background="@color/detail_accent_pane_background"
+		android:orientation="vertical"
+		android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
+		android:paddingEnd="@dimen/activity_vertical_margin"
+		android:paddingLeft="@dimen/activity_horizontal_margin"
+		android:paddingRight="@dimen/activity_horizontal_margin"
+		android:paddingStart="@dimen/activity_vertical_margin"
+		android:paddingTop="@dimen/abc_list_item_padding_horizontal_material">
 
-		<include layout="@layout/grid_detail_today"
-			android:layout_width="match_parent"
-			android:layout_height="0dp"
-			android:layout_weight="3"/>
-
-		<!-- Humidity, wind, pressure -->
 		<TextView
 			android:id="@+id/detail_humidity_textview"
 			style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
@@ -39,7 +48,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:text="Pressure: 1014 hPa"/>
-
 	</LinearLayout>
+</LinearLayout>
 
-</ScrollView>
+
