--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -19,36 +19,90 @@
 		android:background="@color/detail_accent_pane_background"
 		android:orientation="vertical"
 		android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
-		android:paddingEnd="@dimen/activity_vertical_margin"
-		android:paddingLeft="@dimen/activity_horizontal_margin"
-		android:paddingRight="@dimen/activity_horizontal_margin"
-		android:paddingStart="@dimen/activity_vertical_margin"
+		android:paddingEnd="@dimen/detail_horizontal_padding"
+		android:paddingLeft="@dimen/detail_horizontal_padding"
+		android:paddingRight="@dimen/detail_horizontal_padding"
+		android:paddingStart="@dimen/detail_horizontal_padding"
 		android:paddingTop="@dimen/abc_list_item_padding_horizontal_material">
 
-		<TextView
-			android:id="@+id/detail_humidity_textview"
-			style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
+		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_marginBottom="@dimen/details_humidity_margin"
-			android:layout_marginTop="@dimen/details_humidity_margin"
-			android:text="Humidity: 48%"/>
+			android:orientation="horizontal">
 
-		<TextView
-			android:id="@+id/detail_wind_textview"
-			style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginBottom="@dimen/details_humidity_margin"
-			android:text="Wind: 6 km/h NW"/>
+			<TextView
+				android:id="@+id/detail_humidity_label_text_view"
+				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"
+				android:gravity="center_vertical|left"
+				android:text="@string/humidity"/>
 
-		<TextView
-			android:id="@+id/detail_pressure_textview"
-			style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
+			<TextView
+				android:id="@+id/detail_humidity_textview"
+				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"
+				android:gravity="center_vertical|left"
+				android:text="48%"/>
+
+		</LinearLayout>
+
+		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="Pressure: 1014 hPa"/>
+			android:orientation="horizontal">
+
+			<TextView
+				android:id="@+id/detail_wind_label_textview"
+				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"
+				android:gravity="center_vertical|left"
+				android:text="@string/wind"/>
+
+			<TextView
+				android:id="@+id/detail_wind_textview"
+				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"
+				android:gravity="center_vertical|left"
+				android:text="6 km/h NW"/>
+		</LinearLayout>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">
+			<TextView
+				android:id="@+id/detail_pressure_label_textview"
+				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:gravity="center_vertical|left"
+				android:layout_weight="1"
+				android:text="@string/pressure"/>
+			<TextView
+				android:id="@+id/detail_pressure_textview"
+				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:gravity="center_vertical|left"
+				android:layout_weight="1"
+				android:text="1014 hPa"/>
+		</LinearLayout>
 	</LinearLayout>
+
+	<!-- for transition effect from one image to another -->
+	<ImageSwitcher
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:id="@+id/imageSwitcher"
+		android:layout_gravity="right" />
 </LinearLayout>
 
 
