--- a/app/src/main/res/values/textsizes.xml
+++ b/app/src/main/res/values/textsizes.xml
@@ -9,4 +9,5 @@
 	<dimen name="ts_details_today_header">24sp</dimen>
 	<dimen name="ts_details_date">16sp</dimen>
 	<dimen name="ts_forecast">22sp</dimen>
+	<dimen name="ts_humidity_value">36sp</dimen>
 </resources>
