--- a/app/src/main/res/layout-port/grid_detail_humidity.xml
+++ b/app/src/main/res/layout-port/grid_detail_humidity.xml
@@ -29,7 +29,7 @@
 
 	<TextView
 		android:id="@+id/detail_humidity_textview"
-		style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
+		style="@style/SansSerifLight.TC_White.TS_Primary"
 		android:gravity="center_vertical"
 		app:layout_columnWeight="1"
 		app:layout_gravity="fill_horizontal"
@@ -44,7 +44,7 @@
 
 	<TextView
 		android:id="@+id/detail_wind_textview"
-		style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
+		style="@style/SansSerifLight.TC_White.TS_Primary"
 		android:gravity="center_vertical"
 		android:text="6 km/h NW"/>
 
@@ -56,7 +56,7 @@
 		android:text="@string/pressure"/>
 	<TextView
 		android:id="@+id/detail_pressure_textview"
-		style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
+		style="@style/SansSerifLight.TC_White.TS_Primary"
 		android:gravity="center_vertical"
 		android:text="1014 hPa"/>
 
