--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -11,7 +11,16 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-		app:theme="@style/SunshineToolBar"/>
+		app:theme="@style/SunshineToolBar">
+
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/app_name"
+			android:gravity="center_vertical"
+			android:layout_gravity="center"
+			style="@style/TitleActionBar"/>
+		</android.support.v7.widget.Toolbar>
 
 	<fragment android:id="@+id/fragment_main"
 			  android:name="com.hally.sunshine.view.MainForecastFragment"
