--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -13,10 +13,19 @@
 	<android.support.v7.widget.Toolbar
 		android:id="@+id/toolbar"
 		android:layout_width="match_parent"
-		android:layout_height="?attr/actionBarSize"
-		android:minHeight="?attr/actionBarSize"
-		app:popupTheme="@style/PopupMenuListView"
-		app:theme="@style/SunshineToolBar"/>
+		android:layout_height="wrap_content"
+		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+		app:theme="@style/SunshineToolBar">
+
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/app_name"
+			android:gravity="center_vertical"
+			android:layout_gravity="center"
+			style="@style/TitleActionBar"/>
+	</android.support.v7.widget.Toolbar>
+
 
 	<LinearLayout android:layout_width="match_parent"
 				  android:layout_height="match_parent"
