--- a/app/src/main/res/layout-sw600dp-v21/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-v21/activity_main.xml
@@ -13,14 +13,23 @@
 	<android.support.v7.widget.Toolbar
 		android:id="@+id/toolbar"
 		android:layout_width="match_parent"
-		android:layout_height="?attr/actionBarSize"
-		android:minHeight="?attr/actionBarSize"
-		app:popupTheme="@style/PopupMenuListView"
-		app:theme="@style/SunshineToolBar"/>
+		android:layout_height="wrap_content"
+		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+		app:theme="@style/SunshineToolBar">
+
+		<TextView
+			style="@style/TitleActionBar"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center"
+			android:gravity="center_vertical"
+			android:text="@string/app_name"/>
+	</android.support.v7.widget.Toolbar>
+
 
 	<LinearLayout android:layout_width="match_parent"
 				  android:layout_height="match_parent"
-		android:orientation="vertical">
+				  android:orientation="vertical">
 
 		<!-- We will use a dynamic fragment in container since for vertical layout we do not need
 		 details from the right side-->
