--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,16 @@
 	<dimen name="activity_vertical_margin">16dp</dimen>
 	<dimen name="icon_todayitem_size">96dp</dimen>
 	<dimen name="icon_details_size">136dp</dimen>
-	<dimen name="icon_listitem_size">50dp</dimen>
+	<dimen name="icon_listitem_size">40dp</dimen>
 	<dimen name="today_item_left_margin">60dp</dimen>
 	<dimen name="notification_large_icon_default">48dp</dimen>
 	<dimen name="detail_horizontal_padding">32dp</dimen>
+	<dimen name="forecast_text_width">49dp</dimen>
+	<dimen name="forecast_temperature_space">8dp</dimen>
+
+
+	<!-- Text Sizes - We are using DP here rather than SP because these are already large
+		 font sizes, and going larger will cause lots of view problems.  This is only for
+		 the large forecast numbers in the forecast list -->
+	<dimen name="forecast_text_size">32dp</dimen>
 </resources>
