--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -19,6 +19,7 @@
 			android:text="@string/app_name"
 			android:gravity="center_vertical"
 			android:layout_gravity="center"
+			android:layout_marginTop="?attr/actionBarSize"
 			style="@style/TitleActionBar"/>
 		</android.support.v7.widget.Toolbar>
 
